--- a/src/uas_labpbo/Frame_1.form
+++ b/src/uas_labpbo/Frame_1.form
@@ -75,16 +75,22 @@
         <Component class="javax.swing.JTable" name="daftarTable">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="20">
+              <Table columnCount="5" rowCount="20">
                 <Column editable="false" title="nama_lukisan" type="java.lang.String"/>
                 <Column editable="true" title="pelukis" type="java.lang.String"/>
                 <Column editable="true" title="tahun" type="java.lang.Integer"/>
                 <Column editable="true" title="jenis_aliran" type="java.lang.String"/>
+                <Column editable="true" title="foto" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
                 <Column maxWidth="-1" minWidth="-1" prefWidth="5" resizable="false">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
                   <Renderer/>
