--- a/src/uas_labpbo/Frame_1.form
+++ b/src/uas_labpbo/Frame_1.form
@@ -75,12 +75,11 @@
         <Component class="javax.swing.JTable" name="daftarTable">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="5" rowCount="20">
-                <Column editable="false" title="nama_lukisan" type="java.lang.String"/>
-                <Column editable="false" title="pelukis" type="java.lang.String"/>
-                <Column editable="false" title="tahun" type="java.lang.Integer"/>
-                <Column editable="false" title="jenis_aliran" type="java.lang.String"/>
-                <Column editable="false" title="gambar_lukisan" type="java.lang.String"/>
+              <Table columnCount="4" rowCount="20">
+                <Column editable="false" title="No." type="java.lang.Integer"/>
+                <Column editable="false" title="Nama Karya" type="java.lang.String"/>
+                <Column editable="false" title="Pelukis" type="java.lang.String"/>
+                <Column editable="false" title="Aliran seni" type="java.lang.String"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -90,17 +89,12 @@
                   <Editor/>
                   <Renderer/>
                 </Column>
-                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="100" resizable="false">
                   <Title/>
                   <Editor/>
                   <Renderer/>
                 </Column>
-                <Column maxWidth="-1" minWidth="-1" prefWidth="10" resizable="false">
-                  <Title/>
-                  <Editor/>
-                  <Renderer/>
-                </Column>
-                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="100" resizable="false">
                   <Title/>
                   <Editor/>
                   <Renderer/>
@@ -136,7 +130,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="53" max="32767" attributes="0"/>
+                  <EmptySpace pref="26" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
