--- a/src/uas_labpbo/Frame_1.form
+++ b/src/uas_labpbo/Frame_1.form
@@ -158,6 +158,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="SHOW"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnShow2ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
